--- a/documents/リファクタリング詳細設計書.md
+++ b/documents/リファクタリング詳細設計書.md
@@ -2,88 +2,86 @@
 
 ## **1\. 目的**
 
-現在のプロジェクト構成では、main.pyに処理全体の流れが、har\_parser.pyにデータ抽出とファイル保存のロジックが集中しており、コードが長くなっている。  
+現在のプロジェクト構成では、main.pyに処理全体の流れが集中し、コードが長くなっている。  
 本リファクタリングでは、これらのスクリプトを機能単位で細かく分割し、各モジュールの責務を明確にすることで、コードの可読性、保守性、および再利用性を向上させることを目的とする。
 
 ## **2\. リファクタリング方針**
 
-「関心の分離」の原則に基づき、各スクリプトが単一の責任を持つように再設計する。以下の通り、役割に応じたディレクトリ構造を導入し、ファイルを整理する。
+「関心の分離」の原則に基づき、各スクリプトが単一の責任を持つように再設計する。ソースコードはすべてsrcディレクトリに集約し、役割に応じたサブディレクトリ構造を導入してファイルを整理する。
 
-* config/: config.json や credentials.json といった設定ファイル専用のディレクトリ。  
-* **actions/**: Playwrightによる具体的なブラウザ操作（ログイン、動画再生など）を格納する。  
-* **parsers/**: ファイルやWebページからデータを抽出する処理（HAR解析、メタデータ抽出）を格納する。  
-* **reporters/**: 処理結果を最終的なファイル形式（YAMLなど）で出力する処理を格納する。  
-* **utils/**: 複数のモジュールから利用される共通機能（ロガー設定、タイマーなど）を格納する。  
-* **core/**: アプリケーションの中核となる処理フロー（タスクの実行管理、ブラウザ管理）を格納する。
+* **src/**: すべてのPythonソースコードを格納するルートディレクトリ。  
+* **src/config/**: config.json や credentials.json といった設定ファイル専用のディレクトリ。  
+* **src/actions/**: Playwrightによる具体的なブラウザ操作（ログイン、動画再生など）を格納する。  
+* **src/parsers/**: Webページからデータを抽出する処理（メタデータ抽出、リアルタイムURL監視）を格納する。  
+* **src/reporters/**: 処理結果を最終的なファイル形式（YAMLなど）で出力する処理を格納する。  
+* **src/utils/**: 複数のモジュールから利用される共通機能（ロガー設定、タイマーなど）を格納する。  
+* **src/core/**: アプリケーションの中核となる処理フロー（タスクの実行管理、ブラウザ管理）を格納する。
 
 ## **3\. 新しいファイル構成**
 
 .  
-├── main.py                     \# \[変更\] アプリケーションのエントリーポイント  
+├── app.py                      \# \[変更\] アプリケーションのエントリーポイント  
 |  
-├── config/                     \# \[新規\] 設定ファイル  
-│   ├── config.json  
-│   └── credentials.json  
-|  
-├── core/                       \# \[新規\] 中核ロジック  
-│   ├── browser\_manager.py      \# \[新規\] ブラウザの起動、ログイン、状態管理  
-│   └── task\_processor.py       \# \[新規\] 動画処理のループとリトライ管理  
-|  
-├── actions/                    \# \[新規\] ブラウザ操作  
-│   ├── login\_actions.py        \# \[移動\] ログイン操作  
-│   └── video\_actions.py        \# \[移動\] 動画再生操作  
-|  
-├── parsers/                    \# \[新規\] データ抽出  
-│   ├── har\_parser.py           \# \[移動/変更\] HARからのURL抽出  
-│   └── metadata\_parser.py      \# \[移動\] HTMLからのメタデータ抽出  
-|  
-├── reporters/                  \# \[新規\] 結果出力  
-│   └── yaml\_reporter.py        \# \[新規\] YAMLファイルへの保存  
-|  
-├── utils/                      \# \[新規\] 共通ユーティリティ  
-│   ├── config\_loader.py        \# \[移動\] 設定ファイル読み込み  
-│   ├── logger\_setup.py         \# \[移動\] ロガー設定  
-│   └── countdown\_timer.py      \# \[移動\] カウントダウンタイマー  
-|  
-├── requirements.txt            \# 変更なし  
-└── ...
+└── src/                        \# \[新規\] ソースコードルート  
+    ├── config/                 \# \[新規\] 設定ファイル  
+    │   ├── config.json  
+    │   └── credentials.json  
+    |  
+    ├── core/                   \# \[新規\] 中核ロジック  
+    │   ├── browser\_manager.py  
+    │   └── task\_processor.py  
+    |  
+    ├── actions/                \# \[新規\] ブラウザ操作  
+    │   ├── login\_actions.py  
+    │   └── video\_actions.py  
+    |  
+    ├── parsers/                \# \[新規\] データ抽出  
+    │   ├── url\_finder.py  
+    │   └── metadata\_parser.py  
+    |  
+    ├── reporters/              \# \[新規\] 結果出力  
+    │   └── yaml\_reporter.py  
+    |  
+    └── utils/                  \# \[新規\] 共通ユーティリティ  
+        ├── config\_loader.py  
+        ├── logger\_setup.py  
+        └── countdown\_timer.py
 
 ## **4\. 各モジュールの責務**
 
 | ファイル名 | 責務 |
 | :---- | :---- |
-| **main.py** | アプリケーション全体の起動と終了処理のみを担当するエントリーポイント。task\_processorを呼び出す。 |
-| **core/browser\_manager.py** | Playwrightブラウザのライフサイクル（起動、ログイン、認証情報保存、終了）を管理する。 |
-| **core/task\_processor.py** | config.jsonのルールに基づき、動画IDとバージョンのループ、リトライ処理など、タスク実行の全体フローを管理する。 |
-| **actions/login\_actions.py** | ログインページのフォーム入力とクリック操作に専念する。 |
-| **actions/video\_actions.py** | 動画ページのキーボード操作による再生実行に専念する。 |
-| **parsers/har\_parser.py** | HARファイルからm3u8形式のURLを抽出する責務のみを持つ。 |
-| **parsers/metadata\_parser.py** | HTMLページから動画のメタデータを抽出する。 |
-| **reporters/yaml\_reporter.py** | 最終的な集計データを、指定されたフォーマットでYAMLファイルに出力する。 |
-| **utils/config\_loader.py** | config/ディレクトリから設定ファイルを読み込み、設定オブジェクトを生成する。 |
-| **utils/logger\_setup.py** | ログ設定を初期化する。 |
-| **utils/countdown\_timer.py** | 待機中のカウントダウンをコンソールに表示する。 |
+| **app.py** | アプリケーション全体の起動と終了処理のみを担当するエントリーポイント。src.core.task\_processorを呼び出す。 |
+| **src/core/browser\_manager.py** | Playwrightブラウザのライフサイクル（起動、ログイン、認証情報保存、終了）を管理する。 |
+| **src/core/task\_processor.py** | config.jsonのルールに基づき、動画IDとバージョンのループ、リトライ処理など、タスク実行の全体フローを管理する。 |
+| **src/actions/login\_actions.py** | ログインページのフォーム入力とクリック操作に専念する。 |
+| **src/actions/video\_actions.py** | 動画ページのキーボード操作による再生実行に専念する。 |
+| **src/parsers/url\_finder.py** | ネットワーク通信をリアルタイムで監視し、m3u8形式のURLを抽出する責務を持つ。 |
+| **src/parsers/metadata\_parser.py** | HTMLページから動画のメタデータを抽出する。 |
+| **src/reporters/yaml\_reporter.py** | 最終的な集計データを、指定されたフォーマットでYAMLファイルに出力する。 |
+| **src/utils/config\_loader.py** | src/config/ディレクトリから設定ファイルを読み込み、設定オブジェクトを生成する。 |
+| **src/utils/logger\_setup.py** | ログ設定を初期化する。 |
+| **src/utils/countdown\_timer.py** | 待機中のカウントダウンをコンソールに表示する。 |
 
 ## **5\. 主要な変更点**
 
-* **main.pyの簡素化**:  
-  * 従来のmain.pyにあった複雑なループ、リトライ、ブラウザ管理のロジックは、新設するbrowser\_manager.pyとtask\_processor.pyに完全に移譲される。  
-  * main.pyは、これらのクラスを初期化して実行を開始するだけの、非常にシンプルな構造になる。  
-* **har\_parser.pyの責務分割**:  
-  * 従来har\_parser.pyが持っていた「URL抽出」と「YAMLファイル保存」の2つの責務を分割する。  
-  * 「URL抽出」機能はparsers/har\_parser.pyに残し、「YAMLファイル保存」機能は新設するreporters/yaml\_reporter.pyに移管する。  
+* **srcディレクトリの導入**:  
+  * すべてのソースコードと設定ファイルをsrcディレクトリ以下に配置することで、プロジェクトのルートディレクトリをクリーンに保つ。  
+* **エントリーポイントの変更**:  
+  * main.pyからapp.pyに名称を変更し、責務をアプリケーションの起動のみに限定する。  
+* **URL抽出方法の変更 (HARファイルレス化)**:  
+  * HARファイルを利用したURL抽出を廃止し、代わりにネットワーク通信をリアルタイムで監視するparsers/url\_finder.pyを新設する。  
 * **coreモジュールの新設**:  
-  * アプリケーションの中核となる「ブラウザ管理」と「タスク処理」をcoreディレクトリに分離することで、ビジネスロジックと具体的な操作（actions）や解析（parsers）を明確に分離する。  
-* config**ディレクトリの新設**:  
-  * config.jsonとcredentials.jsonをconfig/ディレクトリに配置することで、ソースコードと設定ファイルを明確に分離し、管理を容易にする。
+  * 「ブラウザ管理」と「タスク処理」をsrc/coreディレクトリに分離し、ビジネスロジックと具体的な操作を明確に分離する。  
+* **configディレクトリの新設**:  
+  * config.jsonとcredentials.jsonをsrc/config/ディレクトリに配置し、ソースコードと設定ファイルを明確に分離する。
 
 ## **6\. 実装ステップ**
 
-1. **ディレクトリ作成**: config, core, actions, parsers, reporters, utils ディレクトリを作成する。  
-2. **ファイル移動**: 既存のファイルを、上記の「新しいファイル構成」に従って各ディレクトリに移動する。特にconfig.jsonとcredentials.jsonはconfig/ディレクトリに移動する。  
-3. utils/config\_loader.py**の修正**: 設定ファイルをconfig/ディレクトリから読み込むようにパスを修正する。  
-4. **har\_parser.pyの分割**: save\_extracted\_urls関数をhar\_parser.pyから削除し、その内容をreporters/yaml\_reporter.pyにsave\_resultsとして新しく作成する。  
-5. **browser\_manager.pyの実装**: main.pyからブラウザの起動、ログイン、認証情報保存、終了に関連するコードを抽出し、クラスとして再構成する。  
-6. **task\_processor.pyの実装**: main.pyから動画IDとバージョンのループ、リトライ処理、各モジュール（actions, parsers）の呼び出しロジックを抽出し、クラスとして再構成する。  
-7. **main.pyの修正**: browser\_managerとtask\_processorを呼び出すだけのシンプルなエントリーポイントとして書き換える。  
-8. **import文の修正**: 全てのファイルで、新しいディレクトリ構造に合わせてimport文を修正する。
+1. **ディレクトリ作成**: srcディレクトリと、その下にconfig, core, actions, parsers, reporters, utils ディレクトリを作成する。  
+2. **ファイル移動・リネーム**: 既存のファイルを、上記の「新しいファイル構成」に従って各ディレクトリに移動する。main.pyはapp.pyにリネームする。  
+3. **utils/config\_loader.pyの修正**: 設定ファイルをsrc/config/ディレクトリから読み込むようにパスを修正し、HAR関連の記述を削除する。  
+4. **url\_finder.pyの導入**: har\_parser.pyをプロジェクトから削除する。代わりに、リアルタイムでURLを監視・抽出するparsers/url\_finder.pyを新しく実装する。YAML保存機能はreporters/yaml\_reporter.pyにsave\_resultsとして実装する。  
+5. **browser\_manager.pyとtask\_processor.pyの実装**: src/coreディレクトリ内に、それぞれの責務を持つクラスとして実装する。  
+6. **app.pyの修正**: src.core.task\_processorを呼び出すだけのシンプルなエントリーポイントとして書き換える。  
+7. **import文の修正**: 全てのファイルで、srcディレクトリをルートとした新しいモジュールパスに合わせてimport文を修正する (from src.utils.logger\_setup import ... のように）。
